[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makerlog-agent"
version = "0.2.0"
description = "Agent framework for maker project tracking and build logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cocapn", email = "cocapn@example.com" }
]
keywords = ["maker", "project tracking", "build logs", "workshop", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://makerlog.ai"
Documentation = "https://github.com/SuperInstance/makerlog-agent"
Repository = "https://github.com/SuperInstance/makerlog-agent"
Issues = "https://github.com/SuperInstance/makerlog-agent/issues"

dependencies = [
    "fleet-agent>=0.2.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["makerlog_agent"]
dependencies = ["domain-agent-base @ git+https://github.com/SuperInstance/domain-agent-base.git"]
